--- a/caribue.css
+++ b/caribue.css
@@ -1,5 +1,5 @@
 body{
-	background: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/cW5lDBG/videoblocks-abstract-programming-code-background-software-development-concept_bdh5fisnx_thumbnail-small01.jpg);
+	background-color: grey;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
