--- a/caribue.css
+++ b/caribue.css
@@ -1,9 +1,9 @@
 body{
-	background-color: grey;
+	background-color: blue;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
 h4{
-	color: white;
+	color: black;
 }
