changed colors once again

--- a/caribue.css
+++ b/caribue.css
@@ -1,9 +1,9 @@
 body{
-	background-color: blue;
+	background-color: green;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
 h4{
-	color: black;
+	color: red;
 }
